# rsdap

./: .gitignore  AGENTS.md  Cargo.toml  justfile
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: SPEC-colors.md  SPEC-format-toggle.md  SPEC-rust-rewrite.md  SPEC-search-page.md  implementation-plan.md  sample-config.yaml
src/: app.rs  cache.rs  main.rs
src/config/: cli.rs  file.rs  mod.rs  types.rs
src/dns/: mod.rs  record.rs  zone.rs
src/export/: json.rs  mod.rs
src/formats/: attributes.rs  colors.rs  display.rs  mod.rs  timestamp.rs
src/ldap/: auth.rs  connection.rs  mod.rs  mutation.rs  search.rs
src/net/: mod.rs  socks.rs  ssh.rs
src/security/: ace.rs  descriptor.rs  mod.rs  sid.rs
src/tui/: attrs.rs  connection_form.rs  event.rs  header.rs  layout.rs  log_panel.rs  mod.rs  status_bar.rs
src/tui/pages/: dacl.rs  dns.rs  explorer.rs  gpo.rs  groups.rs  help.rs  mod.rs  search.rs
src/tui/widgets/: form.rs  mod.rs  tree.rs
