[package]
name = "rsdap"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A TUI LDAP client with Microsoft Active Directory support"
license = "MIT"
repository = "https://github.com/jdputsch/rsdap"

[[bin]]
name = "rsdap"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# LDAP
ldap3 = { version = "0.11", features = ["tls"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Config / serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Platform config/data directories (XDG on Unix, native on Windows)
etcetera = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex
regex = "1"

# Password prompting
rpassword = "7"

# SOCKS5 proxy
tokio-socks = "0.5"

# SSH tunneling
russh = "0.45"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Bit flags
bitflags = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
